--- a/index.html
+++ b/index.html
@@ -51,8 +51,30 @@
                 <button class="sharebtn">Share</button>
             </div>
         </div>
-        <div class="content">
+        <div class="main-content">
+            <div class="meat">
+                <div class="item1">
+                    <h3>Super Cool Project</h3>
+                </div>
+                <div class="item2">
+                    <h3>Less Cool Project</h3>
+                </div>
+                <div class="item3">
+                    <h3>Impossible App</h3>
+                </div>
+                <div class="item4">
+                    <h3>Easy Peasy App</h3>
+                </div>
+                <div class="item5">
+                    <h3>Ad Blocker</h3>
+                </div>
+                <div class="item6">
+                    <h3>Money Maker</h3>
+                </div>
+            </div>
+            <div class="salad">
 
+            </div>
         </div>
     </main>
 </body>
