--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="sidebar">
-            <h1>Dashboard</h1>
+            <h1><i class="material-icons">dashboard</i>Dashboard</h1>
 
             <div class="nav">
                 <div class="child1">
@@ -55,25 +55,89 @@
             <div class="meat">
                 <div class="item1">
                     <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, error!</p>
+                    <span>icons</span>
                 </div>
                 <div class="item2">
                     <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, error!</p>
+                    <span>icons</span>
                 </div>
                 <div class="item3">
                     <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, error!</p>
+                    <span>icons</span>
                 </div>
                 <div class="item4">
                     <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, error!</p>
+                    <span>icons</span>
                 </div>
                 <div class="item5">
                     <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, error!</p>
+                    <span>icons</span>
                 </div>
                 <div class="item6">
                     <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, error!</p>
+                    <span>icons</span>
                 </div>
             </div>
             <div class="salad">
+                <div>
+                    <h1>Announcements</h1>
+                    <div>
+                        <div>
+                            <h2>Site Maintenance</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, tenetur!</p>
+                        </div>
+                        <div>
+                            <h2>Community Share Day</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, tenetur!</p>
+                        </div>
+                        <div>
+                            <h2>Updated Privacy Policy</h2>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h1>Trending</h1>
+                    <div>
+                        <div class="flexed">
+                            <img src="user.jpg" alt="img">
+                            <div>
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
 
+                        </div>
+                        <div class="flexed">
+                            <img src="user.jpg" alt="img">
+                            <div>
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
+
+                        </div>
+                        <div class="flexed">
+                            <img src="user.jpg" alt="img">
+                            <div>
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
+
+                        </div>
+                        <div class="flexed">
+                            <img src="user.jpg" alt="img">
+                            <div>
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
